# finder

./: .gitignore  CMakeLists.txt  README.md
src/: ContentFinder.cpp  ContentFinder.h  Crawler.cpp  Crawler.h  PathCrawler.cpp  PathCrawler.h  finderSettings.h  main.cpp
test/: test_argument_parser.cpp  test_content_finder.cpp  test_path_crawler.cpp
test/testdata/: test-dbenc-1-cfq.txt  test-dbenc-1-noop.txt  test-dbenc-32-cfq.txt
test/testdata/bb/: test-dbenc-32-noop.txt
